@@ -537,15 +537,15 @@ function add_wishlist_ajaxremove() {
 }
 
 function pack_split(node, ways) {
-    var price_text = $(node).find(".discount_final_price").html();
+	var price_text = $(node).find(".discount_final_price").html();
 	var at_end, comma, places = 2;
 	if (price_text == null) { price_text = $(node).find(".game_purchase_price").html(); }
-	if (price_text.match(",")) {
+	if (price_text.match(/,\d\d(?!\d)/)) {
 		at_end = true;
 		comma = true;
 		price_text = price_text.replace(",", ".");
 	}
-	var currency_symbol = price_text.match(/(?:R\$|\$|€|£|pуб)/)[0];
+	var currency_symbol = price_text.match(/(?:R\$|\$|€|¥|£|pуб)/)[0];
 	var currency_type = currency_symbol_to_type(currency_symbol);
 	var price = (Number(price_text.replace(/[^0-9\.]+/g,""))) / ways;
 	price = (Math.ceil(price * 100) / 100);
@@ -754,8 +754,8 @@ function add_custom_wallet_amount() {
 	$(addfunds).find(".btn_addtocart_content").addClass("es_custom_button");
 	$(addfunds).find("h1").text(localized_strings[language].wallet.custom_amount);
 	$(addfunds).find("p").text(localized_strings[language].wallet.custom_amount_text.replace("__minamount__", $(addfunds).find(".price").text().trim()));
-	var currency_symbol = $(addfunds).find(".price").text().trim().match(/(?:R\$|\$|€|£|pуб)/)[0];
-	var minimum = $(addfunds).find(".price").text().trim().replace(/(?:R\$|\$|€|£|pуб)/, "");
+	var currency_symbol = $(addfunds).find(".price").text().trim().match(/(?:R\$|\$|€|¥|£|pуб)/)[0];
+	var minimum = $(addfunds).find(".price").text().trim().replace(/(?:R\$|\$|€|¥|£|pуб)/, "");
 	var formatted_minimum = minimum;
 	switch (currency_symbol) {
 		case "€":
@@ -996,45 +996,27 @@ function display_coupon_message(appid) {
 
     var price_div = $("[itemtype=\"http://schema.org/Offer\"]");
 	var	cart_id = $(document).find("[name=\"subid\"]")[0].value;
-    var actual_price_container = $(price_div).find("[itemprop=\"price\"]").text().trim();
-    var original_price = parseFloat(actual_price_container.match(/([0-9]+(?:(?:\,|\.)[0-9]+)?)/)[1].replace(",", "."));
-    var currency_symbol = actual_price_container.match(/(?:R\$|\$|€|£|p??)/)[0];
-    var comma = (actual_price_container.indexOf(",") > -1);
-    var discounted_price = (original_price - (original_price * getValue(appid + "coupon_discount") / 100).toFixed(2)).toFixed(2);
-    
-    if (!($(price_div).find(".game_purchase_discount").length > 0 && getValue(appid + "coupon_discount_doesnt_stack"))) {
-    	
-		if (comma) {
-    		currency_symbol = currency_symbol.replace(".", ",");
-			discounted_price = discounted_price.replace(".", ",");
-		}
-        
-        var original_price_with_symbol;
-    	var discounted_price_with_symbol;
-        
-        switch (currency_symbol) {
-    		case "€":
-				original_price_with_symbol = original_price + currency_symbol;
-				discounted_price_with_symbol = discounted_price + currency_symbol;
-				break;
+	var actual_price_container = $(price_div).find("[itemprop=\"price\"]").text().trim();
+	var currency_symbol = actual_price_container.match(/(?:R\$|\$|€|¥|£|pуб)/)[0]; // Lazy but effective
+	var currency_type = currency_symbol_to_type(currency_symbol);
+	var comma = actual_price_container.search(/,\d\d(?!\d)/);
 
-			case "p??":
-				original_price_with_symbol = parseFloat(original_price).toFixed(0) + " " + currency_symbol;
-				discounted_price_with_symbol = parseFloat(discounted_price).toFixed(0) + " " + currency_symbol;
-				break;
+	if (comma > -1) {
+		actual_price_container = actual_price_container.replace(",", ".");
+	} else {
+		actual_price_container = actual_price_container.replace(",", "");
+	}
 
-			default:
-				original_price_with_symbol = currency_symbol + original_price;
-				discounted_price_with_symbol = currency_symbol + discounted_price;
-				break;
-		}
-        
-        $(price_div).html("<div class=\"game_purchase_action_bg\">" +
+	var original_price = parseFloat(actual_price_container.match(/([0-9]+(?:(?:\,|\.)[0-9]+)?)/)[1]);
+	var discounted_price = (original_price - (original_price * getValue(appid + "coupon_discount") / 100).toFixed(2)).toFixed(2);
+
+	if (!(price_div.find(".game_purchase_discount").length > 0 && getValue(appid + "coupon_discount_doesnt_stack"))) {
+		$(price_div).html("<div class=\"game_purchase_action_bg\">" +
 			"    <div class=\"discount_block game_purchase_discount\">" +
 			"        <div class=\"discount_pct\">-" + getValue(appid + "coupon_discount") + "%</div>" +
 			"        <div class=\"discount_prices\">" +
-			"            <div class=\"discount_original_price\">" + escapeHTML(original_price_with_symbol) + "</div>" +
-			"            <div class=\"discount_final_price\" itemprop=\"price\">" + escapeHTML(discounted_price_with_symbol) + "</div>" +
+			"            <div class=\"discount_original_price\">" + formatCurrency(original_price, currency_type) + "</div>" +
+			"            <div class=\"discount_final_price\" itemprop=\"price\">" + formatCurrency(discounted_price, currency_type) + "</div>" +
 			"        </div>" +
 			"    </div>" +
 			"<div class=\"btn_addtocart\">" +
@@ -1044,7 +1026,6 @@ function display_coupon_message(appid) {
 			"    </div>" +
 			"</div>");
 	}
-
 }
 
 function show_pricing_history(appid, type) {
